cluster-cd/apps/base/echo-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name echo-server
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
