cluster-cd/apps/base/echo-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Scheme $scheme;
  labels:
    app.kubernetes.io/instance: &name echo-server
    app.kubernetes.io/name: *name
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host echo.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: *name
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: echo-server-tls
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
    nginx.ingress.kubernetes.io/auth-url: |-
        https://auth-proxy.${SECRET_DOMAIN}/oauth2/auth
    # If you're using domain-level auth, use the authentication URL instead of the application URL
    nginx.ingress.kubernetes.io/auth-signin: |-
         https://auth-proxy.${SECRET_DOMAIN}/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,Authorization,X-Auth-Request-User,X-Auth-REquest-Email,X-Auth-Request-Groups,X-Auth-Request-Preferred-Username
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Scheme $scheme;
  labels:
    app.kubernetes.io/instance: &name echo-secure
    app.kubernetes.io/name: *name
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host echo-secure.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: echo-server
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: echo-secure-tls
